# zabterm

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  config.ini.example  pyproject.toml
zabterm/: __init__.py  __main__.py
