[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zabterm"
version = "1.0.0"
description = "A terminal-based Zabbix alerts monitor built with Textual"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Emiel Kollof", email = "emiel@example.com"}
]
keywords = ["zabbix", "monitoring", "tui", "terminal", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/zabterm"
Repository = "https://github.com/yourusername/zabterm"
Issues = "https://github.com/yourusername/zabterm/issues"

[project.scripts]
zabterm = "zabterm:main"

[tool.setuptools]
packages = ["zabterm"]

[tool.setuptools.package-data]
zabterm = []
